--- a/assets/scss/error.scss
+++ b/assets/scss/error.scss
@@ -1,5 +1,4 @@
-@import "./libs/valiables";
-@import "./libs/mixins";
+@import "./mixins";
 
 .error {
 	display: flex;
@@ -14,7 +13,7 @@
 	h2 {
 		margin: 30px 0 0;
 		text-align: center;
-		font-family: $font-circular;
+		font-family: var(--font-circular);
 		font-size: 1.25rem;
 		font-weight: 600;
 	}
