--- a/assets/scss/detail.scss
+++ b/assets/scss/detail.scss
@@ -182,3 +182,100 @@
     }
   }
 }
+
+// content body
+.redgoose-body img {
+  display: block;
+  position: relative;
+  left: 50%;
+  max-width: 100vw;
+  max-height: 1200px;
+  transform: translateX(-50%);
+  transform-origin: 50% 50%;
+  margin: calc(var(--size-margin-vertical) * 2) 0 var(--size-margin-vertical);
+  object-fit: contain;
+  @include responsive(desktop) {
+    max-width: 90vw;
+  }
+  @media (max-width: 320px) {
+    max-width: 100%;
+  }
+}
+.redgoose-body {
+  .grid-item {
+    --grid-item-columns: 4;
+    --grid-item-gap: 10px;
+    position: relative;
+    display: grid;
+    grid-template-columns: repeat(var(--grid-item-columns), 1fr);
+    grid-gap: var(--grid-item-gap);
+    margin: calc(var(--size-margin-vertical) * 2) auto var(--size-margin-vertical);
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100vw;
+    max-width: 1024px;
+    transform-origin: 50% 50%;
+    > p {
+      position: relative;
+      margin: 0;
+      box-sizing: border-box;
+      padding-top: 100%;
+      > img {
+        position: absolute;
+        margin: 0;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        max-width: none;
+        max-height: none;
+        transform: none;
+        box-sizing: border-box;
+        object-fit: cover;
+        transition: opacity .2s ease-out;
+        cursor: pointer;
+        &:active {
+          opacity: .5;
+        }
+      }
+    }
+    @for $i from 2 through 12 {
+      &[data-mobile="#{$i}"] { --grid-item-columns: #{$i}; }
+    }
+    @include responsive(tablet) {
+      @for $i from 2 through 12 {
+        &[data-tablet="#{$i}"] { --grid-item-columns: #{$i}; }
+      }
+    }
+    @include responsive(desktop) {
+      width: 90vw;
+      @for $i from 2 through 12 {
+        &[data-desktop="#{$i}"] { --grid-item-columns: #{$i}; }
+      }
+    }
+    @include responsive(max) {
+      @for $i from 2 through 12 {
+        &[data-desktop-large="#{$i}"] { --grid-item-columns: #{$i}; }
+      }
+    }
+    &:first-child {
+      margin-top: 0;
+    }
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+  .grid-group {
+    margin: calc(var(--size-margin-vertical) * 2) auto var(--size-margin-vertical);
+    > .grid-item {
+      margin-top: var(--grid-item-gap);
+      margin-bottom: var(--grid-item-gap);
+      &:first-child {
+        margin-top: 0;
+      }
+      &:last-child {
+        margin-bottom: 0;
+      }
+    }
+  }
+}
