--- a/assets/scss/detail.scss
+++ b/assets/scss/detail.scss
@@ -196,6 +196,9 @@
   object-fit: contain;
   @include responsive(desktop) {
     max-width: 90vw;
+    @include retina() {
+      zoom: .75;
+    }
   }
   @media (max-width: 320px) {
     max-width: 100%;
