--- a/assets/scss/detail.scss
+++ b/assets/scss/detail.scss
@@ -204,11 +204,11 @@
 }
 .redgoose-body {
   .grid-item {
-    --grid-item-columns: 4;
+    --grid-item-columns: 1;
     --grid-item-gap: 10px;
     position: relative;
     display: grid;
-    grid-template-columns: repeat(var(--grid-item-columns), 1fr);
+    grid-template-columns: repeat(var(--grid-item-columns, 1), 1fr);
     grid-gap: var(--grid-item-gap);
     margin: calc(var(--size-margin-vertical) * 2) auto var(--size-margin-vertical);
     left: 50%;
@@ -220,7 +220,8 @@
       position: relative;
       margin: 0;
       box-sizing: border-box;
-      padding-top: 100%;
+      padding-top: var(--padding-top, 100%);
+      grid-column: var(--grid-column, auto);
       > img {
         position: absolute;
         margin: 0;
@@ -240,24 +241,45 @@
         }
       }
     }
-    @for $i from 2 through 12 {
+    @for $i from 2 through 6 {
       &[data-mobile="#{$i}"] { --grid-item-columns: #{$i}; }
+      > p[col="#{$i}"] {
+        --padding-top: calc(100% / #{$i});
+        --grid-column: span #{$i};
+      }
     }
     @include responsive(tablet) {
-      @for $i from 2 through 12 {
+      @for $i from 2 through 6 {
         &[data-tablet="#{$i}"] { --grid-item-columns: #{$i}; }
+        > p[col-tablet="#{$i}"] {
+          --padding-top: calc(100% / #{$i});
+          --grid-column: span #{$i};
+        }
       }
     }
     @include responsive(desktop) {
       width: 90vw;
-      @for $i from 2 through 12 {
+      @for $i from 2 through 6 {
         &[data-desktop="#{$i}"] { --grid-item-columns: #{$i}; }
+        > p[col-desktop="#{$i}"] {
+          --padding-top: calc(100% / #{$i});
+          --grid-column: span #{$i};
+        }
       }
     }
     @include responsive(max) {
-      @for $i from 2 through 12 {
+      @for $i from 2 through 6 {
         &[data-desktop-large="#{$i}"] { --grid-item-columns: #{$i}; }
+        > p[col-desktop-large="#{$i}"] {
+          --padding-top: calc(100% / #{$i});
+          --grid-column: span #{$i};
+        }
       }
+    }
+    @media (max-width: 320px) {
+      max-width: 100%;
+      transform: none;
+      left: auto;
     }
     &:first-child {
       margin-top: 0;
