--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -12,8 +12,8 @@
 	--size-side-padding: 24px;
 	--size-header-height: 48px;
 	--font-base: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
-	--font-eng: Helvetica, Arial, sans-serif;
-	--font-circular: 'Circular', Helvetica, Arial, sans-serif;
+	--font-eng: 'Circular', Helvetica, Arial, sans-serif;
+	--font-title: 'contents-title';
 	--font-code: 'SFMono-Regular', Consolas, 'Liberation Mono', Menlo, Courier, monospace;
 	@include dark-mode() {
 		--color-text: #d8d8d8;
