--- a/assets/scss/detail.scss
+++ b/assets/scss/detail.scss
@@ -12,7 +12,7 @@
       font-size: 0;
       span {
         display: inline-block;
-        font-family: var(--font-circular);
+        font-family: var(--font-eng);
         font-size: .625rem;
         &:nth-child(n+2):before {
           content: '/';
@@ -25,10 +25,11 @@
     h2 {
       margin: 1px 0 0;
       padding: 0 20px;
-      font-weight: 600;
+      letter-spacing: -.05rem;
+      line-height: 1.25;
+      font-family: var(--font-title);
+      font-weight: normal;
       font-size: 1.75rem;
-      letter-spacing: -1px;
-      line-height: 1.2;
     }
   }
   &__body {
@@ -51,7 +52,7 @@
     p {
       margin: 30px 0 0;
       text-align: center;
-      font-family: var(--font-circular);
+      font-family: var(--font-eng);
       font-size: 1rem;
       font-weight: 400;
     }
@@ -69,7 +70,8 @@
         }
       }
       h2 {
-        font-size: 2.25rem;
+        padding: 0;
+        font-size: 2.5rem;
       }
     }
     &__body {
@@ -129,7 +131,7 @@
     display: block;
     margin: -2px 0 0;
     font-style: normal;
-    font-family: var(--font-circular);
+    font-family: var(--font-eng);
     font-size: 11px;
     font-weight: 400;
     color: var(--color-text-blur);
@@ -206,6 +208,10 @@
   }
 }
 .redgoose-body {
+  h1, h2, h3, h4, h5, h6 {
+    font-family: var(--font-title);
+    font-weight: normal;
+  }
   .grid-item {
     --grid-item-columns: 1;
     --grid-item-gap: 10px;
