--- a/assets/scss/error.scss
+++ b/assets/scss/error.scss
@@ -13,7 +13,7 @@
 	h2 {
 		margin: 30px 0 0;
 		text-align: center;
-		font-family: var(--font-circular);
+		font-family: var(--font-eng);
 		font-size: 1.25rem;
 		font-weight: 600;
 	}
