--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -25,17 +25,16 @@
   &__title {
     margin: 0;
     text-align: center;
-    font-family: var(--font-circular);
+    font-family: var(--font-title);
     font-size: 24px;
-    line-height: 1.15;
-    letter-spacing: -1px;
-    font-weight: 600;
+    line-height: 1.25;
+    letter-spacing: normal;
+    font-weight: 400;
     color: var(--color-index-header-title);
   }
   @include responsive(tablet) {
     &__title {
-      font-size: 36px;
-      letter-spacing: -1.5px;
+      font-size: 38px;
     }
   }
   @include dark-mode() {
@@ -73,7 +72,7 @@
     }
     em {
       display: flex;
-      font-family: var(--font-circular);
+      font-family: var(--font-eng);
       font-size: 14px;
       font-weight: 500;
       font-style: normal;
@@ -105,7 +104,7 @@
     a {
       display: block;
       padding: 8px var(--size-side-padding);
-      font-family: var(--font-circular);
+      font-family: var(--font-eng);
       font-size: .8125rem;
       font-weight: 400;
       color: var(--color-text);
@@ -319,7 +318,7 @@
     span {
       display: block;
       margin: 2px 0 0;
-      font-family: var(--font-circular);
+      font-family: var(--font-eng);
       font-size: .625rem;
       color: var(--color-text-blur);
     }
@@ -480,7 +479,7 @@
     text-align: center;
     font-size: 1.25rem;
     font-weight: 500;
-    font-family: var(--font-circular);
+    font-family: var(--font-eng);
   }
 }
 
@@ -500,7 +499,7 @@
       justify-content: center;
       width: var(--size-paginate-item);
       height: var(--size-paginate-item);
-      font-family: var(--font-circular);
+      font-family: var(--font-eng);
       font-size: var(--size-paginate-item-text);
       color: var(--color-text);
       font-weight: 500;
