--- a/assets/scss/pages.scss
+++ b/assets/scss/pages.scss
@@ -12,17 +12,17 @@
 		text-align: center;
 		p {
 			margin: 0;
-			font-family: var(--font-circular);
+			font-family: var(--font-eng);
 			font-size: 11px;
 			color: var(--color-text-blur);
 		}
 		h2 {
 			margin: 2px 0 0;
-			font-family: var(--font-circular);
+			font-family: var(--font-title);
 			font-size: 32px;
 			font-weight: 600;
 			line-height: 1;
-			letter-spacing: -1px;
+			color: var(--color-about-metas-section-title);
 		}
 	}
 	&__profile {
@@ -53,10 +53,9 @@
 			}
 			> h3 {
 				margin: 0;
-				font-family: var(--font-circular);
-				font-size: 22px;
-				letter-spacing: -.5px;
-				font-weight: 600;
+				font-family: var(--font-title);
+				font-size: 24px;
+				font-weight: normal;
 				color: var(--color-about-metas-section-title);
 				&:after {
 					content: '';
@@ -72,14 +71,14 @@
 				line-height: 20px;
 				> dt {
 					margin-top: 12px;
-					font-family: var(--font-circular);
+					font-family: var(--font-eng);
 					font-weight: 500;
 					font-size: 15px;
 					color: var(--color-about-metas-section-title);
 				}
 				> dd {
 					margin: 5px 0 0;
-					font-family: var(--font-circular);
+					font-family: var(--font-eng);
 				}
 			}
 		}
@@ -94,8 +93,6 @@
 			}
 			h2 {
 				font-size: 36px;
-				line-height: 1.15;
-				letter-spacing: -1.5px;
 			}
 		}
 		&__profile {
