--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -28,8 +28,8 @@
     font-family: var(--font-title);
     font-size: 24px;
     line-height: 1.25;
-    letter-spacing: normal;
-    font-weight: 500;
+    letter-spacing: -.05rem;
+    font-weight: 400;
     color: var(--color-index-header-title);
   }
   @include responsive(tablet) {
