라이트박스에서 배경색 추가
- 인스타그램 주소 삭제하고 트위터 주소 추가
- 잡다하게 수정

--- a/assets/scss/detail.scss
+++ b/assets/scss/detail.scss
@@ -28,8 +28,8 @@
       letter-spacing: -.1rem;
       line-height: 1.25;
       font-family: var(--font-title);
-      font-weight: 400;
-      font-size: 1.75rem;
+      font-weight: 500;
+      font-size: 30px;
     }
   }
   &__body {
@@ -71,7 +71,8 @@
       }
       h2 {
         padding: 0;
-        font-size: 2.75rem;
+        font-size: 42px;
+        line-height: 1.15;
       }
     }
     &__body {
