--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -25,16 +25,16 @@
   &__title {
     margin: 0;
     text-align: center;
-    font-family: var(--font-title);
+    font-family: var(--font-eng);
     font-size: 24px;
-    line-height: 1.25;
-    letter-spacing: -.05rem;
-    font-weight: 400;
+    line-height: 1.15;
+    letter-spacing: -.5px;
+    font-weight: 600;
     color: var(--color-index-header-title);
   }
   @include responsive(tablet) {
     &__title {
-      font-size: 38px;
+      font-size: 42px;
     }
   }
   @include dark-mode() {
