--- a/assets/scss/pages.scss
+++ b/assets/scss/pages.scss
@@ -22,6 +22,7 @@
 			font-size: 32px;
 			font-weight: 500;
 			line-height: 1;
+      letter-spacing: -.5px;
 			color: var(--color-about-metas-section-title);
 		}
 	}
