--- a/assets/scss/detail.scss
+++ b/assets/scss/detail.scss
@@ -188,25 +188,7 @@
 
 // content body
 .redgoose-body img {
-  display: block;
-  position: relative;
-  left: 50%;
-  max-width: 100vw;
-  transform: translateX(-50%);
-  transform-origin: 50% 50%;
-  margin: calc(var(--size-margin-vertical) * 2.5) 0 var(--size-margin-vertical);
-  @include responsive(desktop) {
-    max-width: 1280px;
-    @include retina() {
-      zoom: .75;
-    }
-  }
-  @include responsive(max) {
-    max-width: 1440px;
-  }
-  @media (max-width: 320px) {
-    max-width: 100%;
-  }
+
 }
 .redgoose-body {
   h1, h2, h3, h4, h5, h6 {
@@ -214,10 +196,37 @@
     font-weight: normal;
   }
   img {
+    display: block;
+    position: relative;
+    left: 50%;
+    max-width: 100vw;
+    margin: calc(var(--size-margin-vertical) * 2.5) 0 var(--size-margin-vertical);
+    transform: translateX(-50%);
+    transform-origin: 50% 50%;
     transition: opacity .2s ease-out;
     cursor: pointer;
+    @include responsive(desktop) {
+      max-width: 1280px;
+      @include retina() {
+        zoom: .75;
+      }
+    }
+    @include responsive(max) {
+      max-width: 1440px;
+    }
+    @media (max-width: 320px) {
+      max-width: 100%;
+    }
     &:active {
       opacity: .75;
+    }
+  }
+  picture {
+    img {
+      cursor: auto;
+      &:active {
+        opacity: unset;
+      }
     }
   }
   .grid-item {
